@@ -17,19 +17,20 @@
  */
 package forge.game.staticability;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
+
 import forge.GameCommand;
 import forge.card.*;
+import forge.game.CardTraitBase;
 import forge.game.Game;
 import forge.game.StaticEffect;
-import forge.game.StaticEffects;
 import forge.game.ability.AbilityUtils;
 import forge.game.ability.ApiType;
 import forge.game.card.*;
 import forge.game.cost.Cost;
+import forge.card.mana.ManaCost;
 import forge.game.keyword.Keyword;
 import forge.game.keyword.KeywordInterface;
 import forge.game.player.Player;
@@ -43,6 +44,7 @@ import forge.util.TextUtil;
 import org.apache.commons.lang3.StringUtils;
 
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.stream.Collectors;
 
@@ -89,21 +91,19 @@ public final class StaticAbilityContinuous {
         final Map<String, String> params = stAb.getMapParams();
         final Card hostCard = stAb.getHostCard();
         final Player controller = hostCard.getController();
-
         final List<Player> affectedPlayers = StaticAbilityContinuous.getAffectedPlayers(stAb);
-        final Game game = hostCard.getGame();
-
-        final StaticEffects effects = game.getStaticEffects();
-        final StaticEffect se = effects.getStaticEffect(stAb);
-        se.setAffectedCards(affectedCards);
-        se.setAffectedPlayers(affectedPlayers);
-        se.setParams(params);
-        se.setTimestamp(hostCard.getLayerTimestamp());
 
         // nothing more to do
         if (stAb.hasParam("Affected") && affectedPlayers.isEmpty() && affectedCards.isEmpty()) {
             return affectedCards;
         }
+
+        final Game game = hostCard.getGame();
+        final StaticEffect se = game.getStaticEffects().getStaticEffect(stAb);
+        se.setAffectedCards(affectedCards);
+        se.setAffectedPlayers(affectedPlayers);
+        se.setParams(params);
+        se.setTimestamp(stAb.getTimestamp());
 
         String addP = "";
         int powerBonus = 0;
@@ -125,8 +125,7 @@ public final class StaticAbilityContinuous {
         ColorSet addColors = null;
         String[] addTriggers = null;
         String[] addStatics = null;
-        boolean removeAllAbilities = false;
-        boolean removeNonMana = false;
+        Predicate<CardTraitBase> removeAbilities = null;
         boolean addAllCreatureTypes = false;
         Set<RemoveType> remove = EnumSet.noneOf(RemoveType.class);
 
@@ -326,10 +325,9 @@ public final class StaticAbilityContinuous {
 
         if (layer == StaticAbilityLayer.ABILITIES) {
             if (params.containsKey("RemoveAllAbilities")) {
-                removeAllAbilities = true;
-                if (params.containsKey("ExceptManaAbilities")) {
-                    removeNonMana = true;
-                }
+                removeAbilities = e -> true;
+            } else if (params.containsKey("RemoveNonManaAbilities")) {
+                removeAbilities = Predicate.not(CardTraitBase::isManaAbility);
             }
 
             if (params.containsKey("AddAbility")) {
@@ -492,7 +490,7 @@ public final class StaticAbilityContinuous {
 
             if (params.containsKey("IgnoreEffectCost")) {
                 String cost = params.get("IgnoreEffectCost");
-                buildIgnorEffectAbility(stAb, cost, affectedPlayers, affectedCards);
+                buildIgnoreEffectAbility(stAb, cost, affectedPlayers, affectedCards);
             }
         }
 
@@ -621,18 +619,26 @@ public final class StaticAbilityContinuous {
                         // name
                         affectedCard.addChangedName(state.getName(), false, se.getTimestamp(), stAb.getId());
                         // Mana cost
-                        affectedCard.addChangedManaCost(state.getManaCost(), se.getTimestamp(), stAb.getId());
+                        affectedCard.addChangedManaCost(state.getManaCost(), false, se.getTimestamp(), stAb.getId());
                         // color
-                        affectedCard.addColorByText(state.getColor(), se.getTimestamp(), stAb);
+                        affectedCard.addColorByText(state.getColor(), false, se.getTimestamp(), stAb);
                         // type
-                        affectedCard.addChangedCardTypesByText(new CardType(state.getType()), se.getTimestamp(), stAb.getId());
+                        affectedCard.addChangedCardTypesByText(state.getType(), se.getTimestamp(), stAb.getId());
                         // abilities
                         affectedCard.addChangedCardTraitsByText(spellAbilities, trigger, replacementEffects, staticAbilities, se.getTimestamp(), stAb.getId());
                         affectedCard.addChangedCardKeywordsByText(keywords, se.getTimestamp(), stAb.getId(), false);
-
                         // power and toughness
                         affectedCard.addNewPTByText(state.getBasePower(), state.getBaseToughness(), se.getTimestamp(), stAb.getId());
                     }
+                }
+                if (stAb.hasParam("Incorporate")) {
+                    final ManaCost manaCost = new ManaCost(stAb.getParam("Incorporate"));
+                    affectedCard.addChangedManaCost(manaCost, true, se.getTimestamp(), stAb.getId());
+                    affectedCard.addColorByText(ColorSet.fromMask(manaCost.getColorProfile()), true, se.getTimestamp(), stAb);
+                }
+                if (stAb.hasParam("ManaCost")) {
+                    final ManaCost manaCost = new ManaCost(stAb.getParam("ManaCost"));
+                    affectedCard.addChangedManaCost(manaCost, false, se.getTimestamp(), stAb.getId());
                 }
 
                 if (stAb.hasParam("AddNames")) { // currently only for AllNonLegendaryCreatureNames
@@ -697,7 +703,7 @@ public final class StaticAbilityContinuous {
             }
 
             // add keywords
-            if ((addKeywords != null && !addKeywords.isEmpty()) || removeKeywords != null || removeAllAbilities) {
+            if ((addKeywords != null && !addKeywords.isEmpty()) || removeKeywords != null || removeAbilities != null) {
                 List<String> newKeywords = null;
                 if (addKeywords != null) {
                     newKeywords = Lists.newArrayList(addKeywords);
@@ -705,9 +711,14 @@ public final class StaticAbilityContinuous {
 
                     newKeywords.removeIf(input -> {
                         // replace one Keyword with list of keywords
-                        if (input.startsWith("Protection") && input.contains("CardColors")) {
-                            for (MagicColor.Color color : affectedCard.getColor()) {
-                                extraKeywords.add(input.replace("CardColors", color.getName()));
+                        if (input.contains("CardColors") || input.contains("cardColors")) {
+                            if (!(affectedCard.getColor().isColorless())) {
+                                for (MagicColor.Color color : affectedCard.getColor()) {
+                                    extraKeywords.add(
+                                            input.replaceAll("CardColors", StringUtils.capitalize(color.getName()))
+                                                    .replaceAll("cardColors", color.getName())
+                                    );
+                                }
                             }
                             return true;
                         }
@@ -727,9 +738,13 @@ public final class StaticAbilityContinuous {
                     }).collect(Collectors.toList());
                 }
 
+                if (newKeywords != null && !newKeywords.isEmpty() && params.containsKey("KeywordMultiplier")) {
+                    newKeywords = newKeywords.stream().flatMap(s -> Collections.nCopies(Integer.valueOf(params.get("KeywordMultiplier")), s).stream()).collect(Collectors.toList());
+                }
+
                 affectedCard.addChangedCardKeywords(newKeywords, removeKeywords,
-                        removeAllAbilities, se.getTimestamp(), stAb, false);
-                affectedCard.updateKeywordsCache(affectedCard.getCurrentState());
+                        removeAbilities != null, se.getTimestamp(), stAb, false);
+                affectedCard.updateKeywordsCache();
             }
 
             // add HIDDEN keywords
@@ -836,10 +851,9 @@ public final class StaticAbilityContinuous {
                 }
 
                 if (!addedAbilities.isEmpty() || !addedTrigger.isEmpty() || addReplacements != null || addStatics != null
-                    || removeAllAbilities) {
+                    || removeAbilities != null) {
                     affectedCard.addChangedCardTraits(
-                        addedAbilities, null, addedTrigger, addedReplacementEffects, addedStaticAbility, removeAllAbilities, removeNonMana,
-                        se.getTimestamp(), stAb.getId(), false
+                        addedAbilities, null, addedTrigger, addedReplacementEffects, addedStaticAbility, removeAbilities, se.getTimestamp(), stAb.getId(), false
                     );
                 }
 
@@ -850,7 +864,7 @@ public final class StaticAbilityContinuous {
 
             // add Types
             if ((addTypes != null && !addTypes.isEmpty()) || (removeTypes != null && !removeTypes.isEmpty()) || addAllCreatureTypes || !remove.isEmpty()) {
-                affectedCard.addChangedCardTypes(addTypes, removeTypes, addAllCreatureTypes, remove,
+                affectedCard.addChangedCardTypes(addTypes != null ? new CardType(addTypes, true) : null, removeTypes != null ? new CardType(removeTypes, true) : null, addAllCreatureTypes, remove,
                         se.getTimestamp(), stAb.getId(), false, stAb.isCharacteristicDefining());
             }
 
@@ -928,7 +942,7 @@ public final class StaticAbilityContinuous {
         return addColors;
     }
 
-    private static void buildIgnorEffectAbility(final StaticAbility stAb, final String costString, final List<Player> players, final CardCollectionView cards) {
+    private static void buildIgnoreEffectAbility(final StaticAbility stAb, final String costString, final List<Player> players, final CardCollectionView cards) {
         final List<Player> validActivator = new ArrayList<>(players);
         for (final Card c : cards) {
             validActivator.add(c.getController());
@@ -954,7 +968,7 @@ public final class StaticAbilityContinuous {
         addIgnore.setIntrinsic(false);
         addIgnore.setApi(ApiType.InternalIgnoreEffect);
         addIgnore.setDescription(cost + " Ignore the effect until end of turn.");
-        sourceCard.addChangedCardTraits(ImmutableList.of(addIgnore), null, null, null, null, false, false, sourceCard.getLayerTimestamp(), stAb.getId());
+        sourceCard.addChangedCardTraits(List.of(addIgnore), null, null, null, null, null, sourceCard.getLayerTimestamp(), stAb.getId());
 
         final GameCommand removeIgnore = new GameCommand() {
             private static final long serialVersionUID = -5415775215053216360L;
@@ -978,7 +992,7 @@ public final class StaticAbilityContinuous {
             if (params.containsKey("GainsAbilitiesOfZones")) {
                 validZones = ZoneType.listValueOf(params.get("GainsAbilitiesOfZones"));
             } else {
-                validZones = ImmutableList.of(ZoneType.Battlefield);
+                validZones = List.of(ZoneType.Battlefield);
             }
             cards.addAll(CardLists.getValidCards(game.getCardsIn(validZones), valids, hostCard.getController(), hostCard, stAb));
         }
